<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nav_background">

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnterMobileNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/cr_enter_mobile_number"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackButton" />

    <View
        android:id="@+id/backgroundContactInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:background="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterMobileNumber" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etMobileNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:expandedHintEnabled="false"
        android:textColorHint="@color/country_code_hnt_color"
        app:hintTextColor="@color/textColorOnButtonSetting"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/cr_mobile_number"
        app:layout_constraintTop_toTopOf="@id/backgroundContactInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:textColor="@color/mobile_no_label"
            android:paddingStart="16dp"
            android:hint="+62"
            android:inputType="phone"
            android:digits="0123456789"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cr_number_match"
        android:textSize="12sp"
        android:textColor="@color/balance_recent_transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMobileNumberLayout" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/btn_next"
        android:enabled="false"
        style="@style/ButtonBni_drawable_right"
        android:gravity="center_vertical|left"
        android:textColor="@color/btn_general_color"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>