<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/beneficiary_success_bg">

    <ImageView
        android:id="@+id/ivBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:src="@drawable/ic_close_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ivPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="26dp"
        android:text="@string/thousand"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingRight="5dp"
        android:background="@android:color/transparent"
        android:drawableRight="@drawable/bni_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rel_done"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/oragne_circle"
        android:layout_marginTop="35dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ivBackButton">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_done" />
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_new_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rel_done"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/new_recipient_added"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_new_receipiant_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_new_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/recipiant_name"
        android:layout_marginTop="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/make_transfer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/intro_logo_color"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:text="@string/make_transfer"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:clipToOutline="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>