<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/beneficiary_success_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="27dp"
            android:padding="8dp"
            android:src="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ivPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/bni_points"
            android:paddingRight="5dp"
            android:text="@string/thousand"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_new_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="24dp"
            android:text="@string/international_funds_transfer"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_mpin_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_mpin"
            android:textColor="@color/textColorOnButtonSetting"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mpinlayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mpin_label">

            <EditText
                android:id="@+id/first_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/second_pin"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/second_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/first_pin"
                app:layout_constraintRight_toLeftOf="@+id/third_pin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/third_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/second_pin"
                app:layout_constraintRight_toLeftOf="@+id/fourth_pin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fourth_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/third_pin"
                app:layout_constraintRight_toLeftOf="@+id/fifth_pin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/fifth_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/fourth_pin"
                app:layout_constraintRight_toLeftOf="@+id/sixth_pin"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/sixth_pin"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/pin_bg"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="1"
                android:password="true"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@+id/fifth_pin"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/intro_logo_color"
        android:gravity="start|center_vertical"
        android:paddingStart="10dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>